# rb-example

./: README.md  meson.build  readme.md
src/main/: main.rb  meson.build
